[package]
name = "toolup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
cpio = "0.4.1"
flate2 = "1.1.5"
indicatif = "0.18.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
tar = "0.4.44"
walkdir = "2.5.0"
xz2 = "0.1.7"
