[package]
name = "toolup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
bzip2 = "0.6.1"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"]}
cpio = "0.4.1"
env_logger = "0.11.8"
flate2 = "1.1.5"
indicatif = "0.18.2"
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls"], default-features = false}
tar = "0.4.44"
walkdir = "2.5.0"
xz2 = "0.1.7"

[profile.release]
opt-level = "z"
lto = true
strip = true
